# servicegraph-py

./: .gitignore  .pre-commit-config.yaml  CHANGELOG.md  CODE_OF_CONDUCT.md  CONTRIBUTING.md  LICENSE  MANIFEST.in  README.md  SECURITY.md  debug_scoped.py  pyproject.toml  pytest.ini
.github/: copilot-instructions.md
.github/ISSUE_TEMPLATE/: bug_report.md  feature_request.md
.github/workflows/: publish.yml  tests.yml
src/dipy/: __init__.py  i_configuration.py  i_configuration_builder.py  request_context.py  service_locator.py  service_registration.py  type_hints.py
src/servicegraph/: __init__.py  application_builder.py  configuration.py  configuration_builder.py  configuration_section.py  dependency_injection_utils.py  i_configuration.py  i_configuration_builder.py  i_configuration_section.py  request_context.py  service_collection.py  service_lifetime.py  service_locator.py  service_provider.py  service_registration.py  type_hints.py
tests/: __init__.py  conftest.py  test_abc_interface_validation_v2.py  test_azure_integration_v2.py  test_configuration.py  test_core_functionality.py  test_error_handling.py  test_integration.py  test_lifecycle_validation.py  test_performance.py  test_primitive_comprehensive.py  test_primitive_factory_sanity.py  test_primitive_types.py  test_service_lifetimes.py  test_transient_persistence.py
